Revert "Fixed Broken style for red checkbox"
This reverts commit 2dc51ffff6df31a0e53c458d8e926ee4a4df69ad.

--- a/skins/default/default.css
+++ b/skins/default/default.css
@@ -152,11 +152,11 @@ a.button.remove,
 input[id*="remove-button"],
 .page-admin-modules-uninstall input#edit-submit {
   cursor: pointer;
-  padding: 0;
+  padding: 6px 10px;
   border-radius: 0;
-  border: 1px solid #B5B5B5;
-  margin-bottom: 0;
-  margin-right: 0.25em;/* LTR */
+  border: none;
+  margin-bottom: 1em;
+  margin-right: 1em;/* LTR */
   color: #fff;
   text-align: center;
   font-weight: normal;
@@ -176,7 +176,7 @@ input[id*="remove-button"]:hover,
 body.page-admin-modules-uninstall input#edit-submit:hover {
   background: #990000;
   border-radius: 0;
-  border: 1px solid #b73939;
+  border: none;
   color: #fff;
 }
 
@@ -190,7 +190,7 @@ body.page-admin-modules-uninstall input#edit-submit:active {
   box-shadow: 0 2px 2px rgba(0,0,0,0.75) inset;
   background: #333;
   border-radius: 0;
-  border: 1px solid #b73939;
+  border: none;
   color: #fff;
 }
 
